# hotel-booking-nlp-pipeline

./: .gitignore  Dockerfile  GITHUB_SETUP.md  LICENSE  README.md  install_dependencies.ps1  pyproject.toml
config/: hotel.yaml  intent_model.yaml  normalization.yaml  schema.json
data/labels/: ground_truth.jsonl
data/processed/: ground_truth_test.jsonl  ground_truth_train.jsonl  intent_test.jsonl  intent_train.jsonl  intent_train_augmented.jsonl
data/raw_emails/: .gitkeep
docs/: DATASET_GENERATION_PROMPT.md  FULL_DATASET_GENERATION_PROMPT.md
documentation/: Phase4_Entity_Extraction_Technical_Report.md
documentation/workarounds/: README.md  debug_gliner.py  gliner_entities.py  test_date_extraction.py  test_gliner.py  test_guest_extraction.py  test_improved_extraction.py
examples/: normalize_example.py
hotel_email_parser/: __init__.py  __main__.py
models/: .gitkeep
pipeline/: __init__.py  business_logic.py  entities.py  intent.py  normalization.py  orchestrator.py  rules.py  segmentation.py
results/: classification_report.txt  intent_evaluation.json  intent_training_history.json
scripts/: evaluate_entity_extraction.py  evaluate_intent.py  evaluate_pipeline.py  evaluate_segmentation.py  prepare_intent_data.py  split_dataset.py  test_pipeline.py  test_segmentation.py  train_intent_classifier.py  validate_ground_truth.py
tests/: __init__.py  test_normalization.py
utils/: __init__.py  config.py  logging_config.py
